# django-adminlogentries

./: CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  runtests.py  setup.py  tox.ini
.github/workflows/: test.yml
admin_log_entries/: admin.py  settings.py
admin_log_entries/templates/admin/admin/logentry/: change_list.html
tests/: test_admin_views.py  urls.py
tests/fixtures/: test_data.json
