[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-adminlogentries"
authors = [
  { name="Adam Taylor", email="ataylor32@gmail.com" },
]
description = "A Django app that provides a ModelAdmin for django.contrib.admin's LogEntry model (with everything except the list disabled)"
readme = "README.rst"
dynamic = ["version"]
dependencies = [
    "Django",
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ataylor32/django-adminlogentries"
Repository = "https://github.com/ataylor32/django-adminlogentries.git"
Issues = "https://github.com/ataylor32/django-adminlogentries/issues"
Changelog = "https://github.com/ataylor32/django-adminlogentries/blob/master/CHANGELOG.md"

[tool.hatch.build]
include = [
  "/admin_log_entries",
]

[tool.hatch.version]
path = "admin_log_entries/__init__.py"
